// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > renders default as expected 1`] = `
<div>
  <div
    class="footer"
  >
    <div
      class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
    >
      <h1
        class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
      >
        Subscribe to our newsletter for the latest updates on AI safety careers
      </h1>
      <form
        class="banner__form flex flex-row items-center justify-center gap-4 mt-6"
      >
        <input
          class="banner__input p-2 rounded border font-sans text-base font-normal text-center w-80"
          placeholder="you@example.com"
          type="text"
          value=""
        />
        <button
          class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--primary bg-bluedot-normal link-on-dark banner__submit-btn"
          data-testid="cta-button"
          type="submit"
        >
          <span
            class="cta-button__text"
          >
            Submit
          </span>
        </button>
      </form>
    </div>
    <footer
      class="footer__main bg-bluedot-darker text-white min-h-[397] p-8 flex flex-col"
    >
      <div
        class="footer__content flex flex-col mb-16"
      >
        <nav
          class="footer__nav grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8"
        >
          <div
            class="footer__section footer__section--brand flex flex-col justify-between h-[180px]"
          >
            <p
              class="footer__logo h-8 text-xl text-white"
            >
              BlueDot Impact
            </p>
            <div
              class="footer__social flex gap-6 justify-center"
            >
              <a
                aria-label="Twitter"
                class="footer__social-link link-on-dark"
                href="https://twitter.com/BlueDotImpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                  />
                </svg>
              </a>
              <a
                aria-label="YouTube"
                class="footer__social-link link-on-dark"
                href="https://youtube.com/@bluedotimpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                  />
                </svg>
              </a>
              <a
                aria-label="Facebook"
                class="footer__social-link link-on-dark"
                href="https://www.facebook.com/bluedotimpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                  />
                </svg>
              </a>
              <a
                aria-label="Instagram"
                class="footer__social-link link-on-dark"
                href="#"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                  />
                </svg>
              </a>
              <a
                aria-label="LinkedIn"
                class="footer__social-link link-on-dark"
                href="https://www.linkedin.com/company/bluedotimpact/"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="footer__section"
          >
            <p
              class="footer__heading text-on-dark font-[650] mb-4"
            >
              BlueDot Impact
            </p>
            <ul
              class="footer__list space-y-2 mb-auto font-normal"
            >
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/about"
                >
                  About us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/support-us"
                >
                  Support us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/careers"
                >
                  Join us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/contact"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="footer__section"
          >
            <p
              class="footer__heading text-on-dark font-[650] mb-4"
            >
              Explore
            </p>
            <ul
              class="footer__list space-y-2 text-base font-normal"
            >
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/intro-to-tai/"
                >
                  Intro to Transformative AI
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/alignment-fast-track/"
                >
                  AI Alignment Fast Track
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/alignment/"
                >
                  AI Alignment In-Depth
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/governance/"
                >
                  AI Governance In-Depth
                </a>
              </li>
            </ul>
          </div>
          <div
            class="footer__section"
          />
        </nav>
      </div>
      <p
        class="footer__copyright text-sm text-center text-bluedot-lighter"
      >
        © 
        2025
         
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://bluedot.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          BlueDot Impact
        </a>
         is primarily funded by 
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://www.openphilanthropy.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Open Philanthropy
        </a>
        , and is a non-profit based in the UK (company number 
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://find-and-update.company-information.service.gov.uk/company/14964572"
          rel="noopener noreferrer"
          target="_blank"
        >
          14964572
        </a>
        ).
      </p>
    </footer>
  </div>
</div>
`;

exports[`Footer > renders with optional args 1`] = `
<div>
  <div
    class="footer"
  >
    <div
      class="banner relative w-full p-12 text-center rounded-lg bg-bluedot-lighter"
    >
      <h1
        class="banner__title text-bluedot-normal font-serif font-normal text-2xl"
      >
        Subscribe to our newsletter for the latest updates on AI safety careers
      </h1>
      <form
        class="banner__form flex flex-row items-center justify-center gap-4 mt-6"
      >
        <input
          class="banner__input p-2 rounded border font-sans text-base font-normal text-center w-80"
          placeholder="you@example.com"
          type="text"
          value=""
        />
        <button
          class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--primary bg-bluedot-normal link-on-dark banner__submit-btn"
          data-testid="cta-button"
          type="submit"
        >
          <span
            class="cta-button__text"
          >
            Submit
          </span>
        </button>
      </form>
    </div>
    <footer
      class="footer__main bg-bluedot-darker text-white min-h-[397] p-8 flex flex-col"
    >
      <div
        class="footer__content flex flex-col mb-16"
      >
        <nav
          class="footer__nav grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8"
        >
          <div
            class="footer__section footer__section--brand flex flex-col justify-between h-[180px]"
          >
            <img
              alt="BlueDot Impact Logo"
              class="footer__logo h-6"
              src="https://www.bluedot.com/test-logo.jpg"
            />
            <div
              class="footer__social flex gap-6 justify-center"
            >
              <a
                aria-label="Twitter"
                class="footer__social-link link-on-dark"
                href="https://twitter.com/BlueDotImpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"
                  />
                </svg>
              </a>
              <a
                aria-label="YouTube"
                class="footer__social-link link-on-dark"
                href="https://youtube.com/@bluedotimpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
                  />
                </svg>
              </a>
              <a
                aria-label="Facebook"
                class="footer__social-link link-on-dark"
                href="https://www.facebook.com/bluedotimpact"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                  />
                </svg>
              </a>
              <a
                aria-label="Instagram"
                class="footer__social-link link-on-dark"
                href="#"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                  />
                </svg>
              </a>
              <a
                aria-label="LinkedIn"
                class="footer__social-link link-on-dark"
                href="https://www.linkedin.com/company/bluedotimpact/"
              >
                <svg
                  class="size-6"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                  />
                </svg>
              </a>
            </div>
          </div>
          <div
            class="footer__section"
          >
            <p
              class="footer__heading text-on-dark font-[650] mb-4"
            >
              BlueDot Impact
            </p>
            <ul
              class="footer__list space-y-2 mb-auto font-normal"
            >
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/about"
                >
                  About us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/support-us"
                >
                  Support us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/careers"
                >
                  Join us
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="/contact"
                >
                  Contact us
                </a>
              </li>
            </ul>
          </div>
          <div
            class="footer__section"
          >
            <p
              class="footer__heading text-on-dark font-[650] mb-4"
            >
              Explore
            </p>
            <ul
              class="footer__list space-y-2 text-base font-normal"
            >
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/intro-to-tai/"
                >
                  Intro to Transformative AI
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/alignment-fast-track/"
                >
                  AI Alignment Fast Track
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/alignment/"
                >
                  AI Alignment In-Depth
                </a>
              </li>
              <li
                class="footer__item"
              >
                <a
                  class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer"
                  href="https://aisafetyfundamentals.com/governance/"
                >
                  AI Governance In-Depth
                </a>
              </li>
            </ul>
          </div>
          <div
            class="footer__section"
          />
        </nav>
      </div>
      <p
        class="footer__copyright text-sm text-center text-bluedot-lighter"
      >
        © 
        2025
         
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://bluedot.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          BlueDot Impact
        </a>
         is primarily funded by 
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://www.openphilanthropy.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Open Philanthropy
        </a>
        , and is a non-profit based in the UK (company number 
        <a
          class="footer__link text-bluedot-lighter hover:text-white hover:cursor-pointer underline"
          href="https://find-and-update.company-information.service.gov.uk/company/14964572"
          rel="noopener noreferrer"
          target="_blank"
        >
          14964572
        </a>
        ).
      </p>
    </footer>
  </div>
</div>
`;
